# cianki-renderbolek

./: CMakeLists.txt
src/: main.cpp
